--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     
      <body>   
-        <h1 id="heade">MICHAEL JACKSON</h1>
+        <h1 style="text-align:center">MICHAEL JACKSON</h1>
      
       <div style="text-align:center" >                                 
      <img src="https://cutewallpaper.org/21/michael-jackson-wallpaper-smile/Michael-Jackson-Wallpapers-HD-Download.jpg" width="300" height="360" style="border: 5px solid black;" alt="King Of Pop">
